# langchain-aks-graph-tracing

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SETUP_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml
app/: graph.py  mcp_server.py  mcp_tools.py  model.py  retriever.py  schemas.py  server.py  telemetry.py  tools.py
data/: corpus.jsonl
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secret.yaml  service.yaml  serviceaccount.yaml
tests/: test_invoke_smoke.py  test_tools_retriever.py  test_trace_validation_optional.py
